--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ h1{
 
 .display-container{
     position: relative;
-    background-color: var(--dk-violet);
+    background: linear-gradient(90deg, rgba(238, 130, 156, 1) 100%, rgba(0, 0, 255, 1) 100%);
+    color: yellow;
     border-radius: 1rem;
     border-bottom: 0.35rem solid var(--lt-violet2);
     margin: 1rem 0;
@@ -79,7 +80,7 @@ h1{
     left: 1.5rem;
     font-size: 1.5rem;
     line-height: 30px;
-    color: yellow;
+    color:  rgba(255, 255, 0, 1);
     opacity: 0.65;
     text-transform: uppercase;
     transform: translateY(-50%);
@@ -114,7 +115,7 @@ h1{
 }
 
 .length-container p:nth-child(2){
-    color: var(--vb-yellow);
+    color: rgba(255, 255, 0, 1);
     font-size: 1.5rem;
 
 }
@@ -133,6 +134,8 @@ h1{
 
 }
 
+
+
 .indicator{
     width: 1.5rem;
     height: 1.5rem;
@@ -146,10 +149,116 @@ h1{
     background-color: var(--vb-violet);
     text-align: center;
     border-radius: 0.75rem;
-    border-bottom: 0.35rem solid var(--vb-yellow);
+    border-bottom: 0.35rem solid  rgba(255, 255, 0, 1);
     text-transform: uppercase;
     letter-spacing: 1px;
-    color: var(--vb-yellow);
+    color:  rgba(255, 255, 0, 1);
     font-weight: 600;
     font-size: 1.25rem;
+}
+
+.check{
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+    gap: 0 1rem;
+}
+
+.check input{
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 1px solid var(--vb-cyan);
+    cursor: pointer;
+    position: relative;
+    border-radius: 0.35rem;
+}
+
+.check input:checked{
+    background-color: var(--vb-cyan);
+}
+
+.check input:checked::before{
+    content: '⩗';
+    position: absolute;
+    color: var(--dk-text);
+    font-size: 1.05rem;
+    font-weight: 600;
+    left: 50%;
+    top: -3.5px;
+    transform: translateX(-50%) translateY(25%);
+}
+
+.check label{
+    color: var(--pl-white);
+    font-size: 1.25rem;
+    letter-spacing: 0.75px;
+}
+
+.slider{
+    appearance: none;
+    width: 100%;
+    height: 0.7rem;
+    cursor: pointer;
+    background-color: var(--lt-violet);
+    border-radius: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    background-image: linear-gradient(var(--vb-violet),var(--vb-violet));
+    background-repeat: no-repeat;
+    border: none;
+    outline: none;
+    z-index: -1;
+
+}
+
+.slider::-webkit-slider-thumb{
+    z-index: 1;
+    position: relative;
+    appearance: none;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color:yellow;
+    cursor: pointer;
+    box-shadow: 0px 0px 20px 0px rgba(255,229,61,0.50);
+    transition: all 100ms ease-in;
+}
+
+.slider:focus{
+    outline: 3px solid yellow;
+}
+.slider::-webkit-slider-thumb:hover{
+    outline: 2px solid yellow;
+    background-color: var(--dk-violet);
+    box-shadow: 2px solid black;
+  
+    
+}
+
+.copyBtn{
+   background-color:  transparent;
+    outline: none;
+    border: none;
+
+}
+
+.tooltip{
+    position: absolute;
+    background-color: var(--vb-violet);
+    color: yellow;
+    font-size: 1.25rem;
+    top: -35px;
+    left: -25px;
+    padding: 5px 10px;
+    border-radius: 1rem;
+    opacity: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+    transition: all 250ms ease-in-out;
+}
+
+.tooltip.active{
+    opacity: 1;
+    transform: scale(1);
 }
